# xfce4-taskmanager

./: .clang-format  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.OS-implementation  README.md  THANKS  TODO  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.ac.in  configure.in  configure.in.in  meson.build  meson_options.txt  module.xml  xfce4-taskmanager.desktop.in
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
data/icons/: Makefile.am  meson.build
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/96x96/: Makefile.am
data/icons/scalable/: Makefile.am
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  POTFILES.skip  ar.po  ast.po  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.gmo  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  (+35 more)
src/: Makefile  Makefile.am  Makefile.in  app-manager.c  app-manager.h  callbacks.c  callbacks.h  exec-tool-button.c  exec-tool-button.h  functions.c  functions.h  gui.c  gui.h  inode-to-sock.c  inode-to-sock.h  interface.c  interface.h  linux.c  linux.h  main.c  menu-positions.c  menu-positions.h  meson.build  network-analyzer.c  network-analyzer.h  process-monitor.c  process-monitor.h  process-statusbar.c  process-statusbar.h  process-tree-model.c  process-tree-model.h  process-tree-view.c  process-tree-view.h  process-window-gtk3.ui  process-window-ui.gresource.xml  process-window.c  process-window.h  process-window.ui  settings-dialog-gtk3.ui  settings-dialog-ui.gresource.xml  (+25 more)
src/.deps/: task_functions.Po  xfce4-taskmanager.Po  xfprocess.Po  xftask.Po
